--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -54,6 +54,14 @@
         <activity
             android:name=".ProfileActivity"
             android:exported="true" />
+
+        <activity
+            android:name=".NotificationsActivity"
+            android:exported="true" />
+
+        <activity
+            android:name=".AboutActivity"
+            android:exported="true" />
     </application>
 
 </manifest>
