Menambahkan fitur "bantuan", fix tombol profil (---V1.3.0---)

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -62,6 +62,10 @@
         <activity
             android:name=".AboutActivity"
             android:exported="true" />
+
+        <activity
+            android:name=".HelpActivity"
+            android:exported="false" />
     </application>
 
 </manifest>
