--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -66,6 +66,7 @@
         <activity
             android:name=".HelpActivity"
             android:exported="false" />
+
         <activity
             android:name=".SettingsActivity"
             android:exported="false"
@@ -74,6 +75,10 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".DashboardActivity" />
         </activity>
+
+        <activity
+            android:name=".UserGuideActivity"
+            android:exported="false" />
     </application>
 
 </manifest>
