--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,15 @@
     xmlns:tools="http://schemas.android.com/tools"
         package="com.example.sinoman">
 
+    <uses-feature
+        android:name="android.hardware.camera"
+        android:required="false" />
+
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"
+        android:maxSdkVersion="28" />
+    <uses-permission android:name="android.permission.CAMERA" />
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -79,6 +88,12 @@
         <activity
             android:name=".UserGuideActivity"
             android:exported="false" />
+
+        <activity
+            android:name=".ImageCropActivity"
+            android:theme="@style/Theme.Sinoman.NoActionBar"
+            android:exported="false" />
+
     </application>
 
 </manifest>
